# ironic-ui

./: .coveragerc  .eslintrc  .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  babel-django.cfg  babel-djangojs.cfg  bindep.txt  lower-constraints.txt  manage.py  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test-shim.js  tox.ini
devstack/: plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  index.rst  installation.rst  usage.rst
doc/source/contributor/: contributing.rst  index.rst
doc/source/install/: index.rst  installation.rst  uninstallation.rst
ironic_ui/: karma.conf.js
ironic_ui/api/: ironic.py  ironic_rest_api.py  my_rest_api.py
ironic_ui/content/: __init__.py
ironic_ui/content/ironic/: panel.py  urls.py  views.py
ironic_ui/content/ironic/templates/ironic/: index.html  node_detail.html
ironic_ui/enabled/: _2200_ironic.py
ironic_ui/ironic/: panel.py  urls.py  views.py
ironic_ui/ironic/templates/ironic/: index.html
ironic_ui/locale/: django.pot  djangojs.pot
ironic_ui/locale/de/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/locale/en_AU/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/locale/en_GB/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/locale/fr/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/locale/id/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/locale/ja/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/locale/ko_KR/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/locale/pt_BR/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/locale/ru/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/locale/tr_TR/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/locale/zh_CN/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/locale/zh_Hans/LC_MESSAGES/: django.po  djangojs.po
ironic_ui/static/dashboard/admin/ironic/: auto-focus.directive.js  driver-property.service.js  driver-property.service.spec.js  empty-to-pristine.directive.js  form-field.directive.js  form-field.html  form-field.service.js  form-field.service.spec.js  graph.service.js  ironic.backend-mock.service.js  ironic.module.js  ironic.service.js  ironic.service.spec.js  modal-draggable.directive.js  node-actions.service.js  node-error.service.js  node-state-transition.service.js  node-state-transition.service.spec.js  postfix-expr.service.js  postfix-expr.service.spec.js  property-collection-editor.directive.js  property-collection-editor.html  property-collection.service.js  property-collection.service.spec.js  test-data.spec.js  update-patch.service.js
ironic_ui/static/dashboard/admin/ironic/base-node/: base-node.controller.js  base-node.controller.spec.js  base-node.html  base-node.service.js  base-node.spec.js
ironic_ui/static/dashboard/admin/ironic/base-port/: base-port.controller.js  base-port.controller.spec.js  base-port.html
ironic_ui/test/: settings.py  urls.py
ironic_ui/test/integration/: horizon.conf  test_basic.py
ironic_ui/test/tests/: registration.py  test_registration.py
ironic_ui/tests/: test_ironic_ui.py
releasenotes/notes/: 2.0-release-3d8acae7c8de429b.yaml  2.1.0-release-3391dfbcf087c883.yaml  add-console-support-ccffcedc845ca214.yaml  adding-driver-interfaces-while-node-enrollment-7cb82d6753074629.yaml  bug-1648548-6e846a0c1e1574aa.yaml  bug-1648550-32e28cf2a401bb02.yaml  bug-1648557-462ebfdf39efee1f.yaml  bug-1648563-e2bc262985873122.yaml  bug-1671567-a95d7cb0d21470e4.yaml  bug-1672709-b485a7a59ea1c129.yaml  drop-python2-0bf548c3946068af.yaml  edit-portgroup-92c62b1ae0cf5e54.yaml  get-client-e30e3b05eb9901ca.yaml  inject-nmi-0320453eaf1bda9b.yaml  unit-test-framework-f61ad7926413bf91.yaml  view-portgroups-a3efb4407536caf2.yaml  wallaby-release-note-f502b2ba09932e4c.yaml
releasenotes/source/: Makefile  conf.py  index.rst  make.bat  newton.rst  ocata.rst
releasenotes/source/locale/de/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/fr/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/id/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ja/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ko_KR/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ru/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/zh_CN/LC_MESSAGES/: releasenotes.po
(+50 files in other folders)
