[metadata]
name = ironic-ui
summary = Ironic plugin UI for Horizon to allow users to view and manage bare metal nodes, ports and drivers.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/ironic-ui/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[pbr]
autodoc_index_modules = True
autodoc_exclude_modules =
  ironic_ui.test.*
api_doc_dir = contributor/api

[files]
packages =
    ironic_ui

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ironic_ui/locale
domain = ironic-ui
